--- a/src/index.html
+++ b/src/index.html
@@ -4,25 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TableSettings</title>
-    <link rel="stylesheet" data-href="/css/css.css">
-    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
-
 </head>
 <body>
-    <model-viewer id="tableModel" camera-controls touch-action="pan-y" 
-    src="models/table.glb"
-     tone-mapping="commerce" 
-    ar alt="A 3D model of a Table">
-        <div class="progress-bar hide" slot="progress-bar">
-            <div class="update-bar"></div>
-        </div>
-        <!-- <button slot="ar-button" id="ar-button">
-            View in your space
-        </button>
-        <div id="ar-prompt">
-            <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
-        </div> -->
-    </model-viewer>
+
     <div class="loader-container" id="loader">
         <div class="loader"></div>
     </div>
@@ -41,3 +25,19 @@
     </div>
 </body>
 </html>
+
+
+<!-- <model-viewer id="tableModel" camera-controls touch-action="pan-y" 
+src="models/table.glb"
+ tone-mapping="commerce" 
+ar alt="A 3D model of a Table">
+    <div class="progress-bar hide" slot="progress-bar">
+        <div class="update-bar"></div>
+    </div>
+    <button slot="ar-button" id="ar-button">
+        View in your space
+    </button>
+    <div id="ar-prompt">
+        <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
+    </div>
+</model-viewer> -->
